# Godwit

./: CMakeLists.txt  FutureFactory.h  GeoUtils.cpp  GeoUtils.h  Godwit.pro  README  colorFactory.h  extendedgeodatacoordinates.h  gpxParser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapviewer.cpp  mapviewer.h  point.cpp  point.h  track.cpp  track.h  tracklayer.cpp  tracklayer.h
