CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
SET( TARGET godwit )
PROJECT( ${TARGET} )

SET( CMAKE_MODULE_PATH "/usr/share/kde4/apps/cmake/modules/" )

FIND_PACKAGE( Qt4 4.6.0 REQUIRED QtCore QtGui QtXml QtNetwork )
FIND_PACKAGE( Marble REQUIRED )
INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES( ${MARBLE_INCLUDE_DIR} )
SET( LIBS ${LIBS} ${MARBLE_LIBRARIES} ${QT_LIBRARIES} ${QT_QTNETWORK_LIBRARY} )

SET( CMAKE_CXX_FLAGS "-std=c++0x" )

FILE( GLOB SRC_FILES "*.cpp" )
FILE( GLOB HEADER_FILES "*.h" )
SET( MOC_HEADERS mainwindow.h mapviewer.h )
SET( FORMS mainwindow.ui )

QT4_WRAP_CPP( MOC_FILES ${MOC_HEADERS} )
QT4_WRAP_UI( FORM_HEADERS ${FORMS} )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} )

ADD_EXECUTABLE( ${TARGET} ${SRC_FILES} ${MOC_FILES} ${FORM_HEADERS} )
TARGET_LINK_LIBRARIES( ${TARGET} ${LIBS} )
